load("//tools:cpplint.bzl", "cpplint")
load("//tools:rules_cc.bzl", "lucid_cc_library", "lucid_srcs")
load("//tools:rules_py_cc.bzl", "lucid_cc_py_binary")
load("//tools:variables.bzl", "LUCID_DESCRIPTION", "LUCID_NAME", "LUCID_VERSION")

lucid_srcs(
    name = "srcs",
    deps = [
        "//lucid/lib:all_srcs",
        "//lucid/model:all_srcs",
        "//lucid/util:all_srcs",
        "//lucid/verification:all_srcs",
    ],
)

genrule(
    name = "generate_version_header",
    outs = ["version.h"],
    cmd = "$(location //tools:generate_version_header) %s %s '%s' > $@" % (LUCID_NAME, LUCID_VERSION, LUCID_DESCRIPTION),
    cmd_bat = "$(location //tools:generate_version_header.bat) %s %s \"%s\" $@" % (LUCID_NAME, LUCID_VERSION, LUCID_DESCRIPTION),
    stamp = True,
    tools = [
        "//tools:generate_version_header",
        "//tools:generate_version_header.bat",
    ],
)

lucid_cc_library(
    name = "version",
    hdrs = [":generate_version_header"],
    visibility = ["//visibility:public"],
)

lucid_cc_library(
    name = "lucid_hdr",
    hdrs = ["lucid.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":version",
        "//lucid/lib:eigen",
        "//lucid/model",
        "//lucid/util",
        "//lucid/verification",
    ],
)

lucid_cc_py_binary(
    name = "lucid",
    srcs = ["main.cpp"],
    py_deps = select({
        "//tools:matplotlib_build": [
            "@pypi//matplotlib",
            "@pypi//numpy",
            "@pypi//tornado",
        ],
        "//conditions:default": [],
    }),
    deps = [
        ":lucid_hdr",
        "//lucid/util:error",
        "//lucid/util:logging",
        "@fmt",
    ] + select({
        "//tools:matplotlib_build": ["//lucid/util:matplotlib"],
        "//conditions:default": [],
    }),
)

# lucid_cc_binary(
#     name = "temp",
#     srcs = ["temp.cpp"],
#     deps = [
#         ":lucid_hdr",
#         ":version",
#         "//lucid/util",
#         "//lucid/util:error",
#         "//lucid/util:logging",
#         "@fmt",
#         "@spdlog",
#     ],
# )

cpplint()
