load("//tools:cpplint.bzl", "cpplint")
load("//tools:rules_cc.bzl", "lucid_cc_library", "lucid_hdrs_tar", "lucid_srcs")

package(default_visibility = [
    "//lucid:__subpackages__",
    "//pylucid:__subpackages__",
    "//tests:__subpackages__",
])

lucid_srcs(name = "srcs")

lucid_hdrs_tar(
    name = "hdrs_tar",
    subfolder = "lib",
)

cpplint()

lucid_cc_library(
    name = "eigen",
    srcs = ["eigen.cpp"],
    hdrs = [
        "eigen.h",
        "eigen_extension.h",
    ],
    implementation_deps = [
        "//lucid/util:error",
        "//lucid/util:math",
    ],
    deps = [
        "//lucid/util:logging",
        "@eigen",
    ],
)
