load("//tools:cpplint.bzl", "cpplint")
load("//tools:rules_cc.bzl", "lucid_cc_library", "lucid_hdrs_tar", "lucid_srcs")

package(default_visibility = [
    "//bindings:__subpackages__",
    "//lucid:__subpackages__",
    "//tests:__subpackages__",
])

lucid_srcs(name = "srcs")

lucid_hdrs_tar(
    name = "hdrs_tar",
    subfolder = "lib",
)

cpplint()

lucid_cc_library(
    name = "eigen",
    srcs = ["eigen.cpp"],
    hdrs = [
        "eigen.h",
        "eigen_extension.h",
        "eigen_matrix_base_plugin.h",
    ],
    implementation_deps = [
        "//lucid/util:error",
        "//lucid/util:math",
    ],
    deps = [
        "//lucid/util:logging",
        "@eigen",
    ],
)

lucid_cc_library(
    name = "gurobi",
    hdrs = ["gurobi.h"],
    tags = ["no-dwyu"],
    deps = select({
        "//tools:gurobi_build": ["@gurobi"],
        "//conditions:default": [],
    }),
)

lucid_cc_library(
    name = "alglib",
    hdrs = ["alglib.h"],
    tags = ["no-dwyu"],
    deps = select({
        "//tools:alglib_build": ["@alglib"],
        "//conditions:default": [],
    }),
)

lucid_cc_library(
    name = "pocketfft",
    hdrs = ["pocketfft.h"],
    deps = ["@pocketfft"],
)
