load("//tools:cpplint.bzl", "cpplint")
load("//tools:rules_cc.bzl", "lucid_cc_library", "lucid_hdrs_tar", "lucid_srcs")

package(default_visibility = [
    "//lucid:__subpackages__",
    "//pylucid:__subpackages__",
    "//tests:__subpackages__",
])

lucid_srcs(name = "srcs")

lucid_hdrs_tar(
    name = "hdrs_tar",
    subfolder = "math",
)

cpplint()

lucid_cc_library(
    name = "kernel",
    srcs = [
        "GaussianKernel.cpp",
        "Kernel.cpp",
    ],
    hdrs = [
        "GaussianKernel.h",
        "Kernel.h",
    ],
    implementation_deps = [
        "//lucid/util:error",
    ],
    deps = [
        "//lucid/lib:eigen",
        "//lucid/util:logging",
    ],
)

lucid_cc_library(
    name = "gram_matrix",
    srcs = [
        "GramMatrix.cpp",
    ],
    hdrs = [
        "GramMatrix.h",
    ],
    implementation_deps = [
        "//lucid/util:error",
    ],
    deps = [
        ":kernel",
        "//lucid/lib:eigen",
        "//lucid/util:logging",
    ],
)

lucid_cc_library(
    name = "set",
    srcs = [
        "MultiSet.cpp",
        "RectSet.cpp",
        "Set.cpp",
    ],
    hdrs = [
        "MultiSet.h",
        "RectSet.h",
        "Set.h",
    ],
    implementation_deps = [
        "//lucid/util:error",
    ] + select({
        "//tools:matplotlib_build": ["//lucid/util:matplotlibcpp"],
        "//conditions:default": [],
    }),
    deps = [
        ":kernel",
        "//lucid/lib:eigen",
        "//lucid/util:logging",
    ],
)
