load("//tools:cpplint.bzl", "cpplint")
load("//tools:rules_cc.bzl", "lucid_cc_library", "lucid_hdrs_tar", "lucid_srcs")

package(default_visibility = [
    "//bindings:__subpackages__",
    "//lucid:__subpackages__",
    "//tests:__subpackages__",
])

lucid_srcs(name = "srcs")

lucid_hdrs_tar(
    name = "hdrs_tar",
    subfolder = "math",
)

cpplint()

lucid_cc_library(
    name = "sampler",
    hdrs = ["Sampler.h"],
    deps = ["//lucid/lib:eigen"],
)

lucid_cc_library(
    name = "kernel",
    srcs = [
        "GaussianKernel.cpp",
        "Kernel.cpp",
    ],
    hdrs = [
        "GaussianKernel.h",
        "Kernel.h",
    ],
    implementation_deps = [
        "//lucid/util:error",
    ],
    deps = [
        "//lucid/lib:eigen",
        "//lucid/util:logging",
    ],
)

lucid_cc_library(
    name = "regression",
    srcs = [
        "KernelRidgeRegression.cpp",
        "Regression.cpp",
    ],
    hdrs = [
        "KernelRidgeRegression.h",
        "Regression.h",
    ],
    implementation_deps = [
        ":gram_matrix",
        "//lucid/util:error",
    ],
    deps = [
        ":kernel",
        "//lucid/lib:eigen",
        "//lucid/util:concepts",
        "//lucid/util:logging",
    ],
)

lucid_cc_library(
    name = "feature_map",
    srcs = [
        "FeatureMap.cpp",
        "TruncatedFourierFeatureMap.cpp",
    ],
    hdrs = [
        "FeatureMap.h",
        "TruncatedFourierFeatureMap.h",
    ],
    implementation_deps = [
        "//lucid/util:error",
        "//lucid/util:index_iterator",
        "//lucid/util:math",
    ],
    deps = [
        ":kernel",
        "//lucid/lib:eigen",
        "//lucid/util:logging",
    ],
)

lucid_cc_library(
    name = "gram_matrix",
    srcs = [
        "GramMatrix.cpp",
        "InverseGramMatrix.cpp",
    ],
    hdrs = [
        "GramMatrix.h",
        "InverseGramMatrix.h",
    ],
    deps = [
        ":kernel",
        "//lucid/lib:eigen",
        "//lucid/util:exception",
        "//lucid/util:logging",
    ],
)

lucid_cc_library(
    name = "set",
    srcs = [
        "MultiSet.cpp",
        "RectSet.cpp",
        "Set.cpp",
    ],
    hdrs = [
        "MultiSet.h",
        "RectSet.h",
        "Set.h",
    ],
    implementation_deps = [
        "//lucid/util:error",
    ] + select({
        "//tools:matplotlib_build": ["//lucid/util:matplotlib"],
        "//conditions:default": [],
    }),
    deps = [
        ":kernel",
        "//lucid/lib:eigen",
        "//lucid/util:logging",
    ],
)

lucid_cc_library(
    name = "optimiser",
    srcs = [
        "GurobiLinearOptimiser.cpp",
    ],
    hdrs = [
        "GurobiLinearOptimiser.h",
    ],
    implementation_deps = [
        "//lucid/lib:gurobi",
        "//lucid/util:error",
        "//lucid/util:logging",
    ],
    deps = [
        "//lucid/lib:eigen",
    ],
)

lucid_cc_library(
    name = "tensor",
    srcs = [
        "Tensor.cpp",
        "TensorIterator.cpp",
        "TensorView.cpp",
    ],
    hdrs = [
        "Tensor.h",
        "TensorIterator.h",
        "TensorView.h",
    ],
    implementation_deps = [
        "//lucid/lib:pocketfft",
        "//lucid/util:error",
    ],
    deps = [
        "//lucid/lib:eigen",
        "//lucid/util:concepts",
        "//lucid/util:exception",
        "//lucid/util:index_iterator",
        "//lucid/util:logging",
    ],
)

lucid_cc_library(
    name = "math",
    hdrs = ["math.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":feature_map",
        ":gram_matrix",
        ":kernel",
        ":optimiser",
        ":regression",
        ":sampler",
        ":set",
        ":tensor",
    ],
)
