load("//tools:cpplint.bzl", "cpplint")
load("//tools:rules_cc.bzl", "lucid_cc_library", "lucid_hdrs_tar", "lucid_srcs")

package(default_visibility = [
    "//lucid:__subpackages__",
    "//pylucid:__subpackages__",
    "//tests:__subpackages__",
])

lucid_srcs(name = "srcs")

lucid_hdrs_tar(
    name = "hdrs_tar",
    subfolder = "tuning",
)

cpplint()

lucid_cc_library(
    name = "optimiser",
    srcs = [
        "LbfgsOptimiser.cpp",
        "Optimiser.cpp",
    ],
    hdrs = [
        "LbfgsOptimiser.h",
        "Optimiser.h",
    ],
    implementation_deps = [
        "//lucid/lib:eigen",
        "//lucid/util:error",
        "//lucid/util:logging",
        "@lbfgscpp",
    ],
    deps = ["//lucid/math:kernel"],
)
