load("//tools:cpplint.bzl", "cpplint")
load("//tools:rules_cc.bzl", "lucid_cc_library", "lucid_hdrs_tar", "lucid_srcs")

package(default_visibility = [
    "//bindings:__subpackages__",
    "//lucid:__subpackages__",
    "//tests:__subpackages__",
])

lucid_srcs(name = "srcs")

lucid_hdrs_tar(
    name = "hdrs_tar",
    subfolder = "tuning",
)

cpplint()

lucid_cc_library(
    name = "tuner",
    srcs = [
        "LbfgsTuner.cpp",
        "MedianHeuristicTuner.cpp",
        "Tuner.cpp",
    ],
    hdrs = [
        "LbfgsTuner.h",
        "MedianHeuristicTuner.h",
        "Tuner.h",
    ],
    implementation_deps = [
        "//lucid/lib:eigen",
        "//lucid/util:logging",
        "@lbfgscpp",
    ],
    tags = ["no-dwyu"],
    deps = [
        "//lucid/math:kernel",
        "//lucid/math:sampler",
    ],
)

lucid_cc_library(
    name = "tuning",
    hdrs = ["tuning.h"],
    deps = [":tuner"],
)
