load("@rules_python//python:pip.bzl", "whl_filegroup")
load("//tools:cpplint.bzl", "cpplint")
load("//tools:rules_cc.bzl", "lucid_cc_library", "lucid_hdrs_tar", "lucid_pybind_library", "lucid_srcs")

package(default_visibility = [
    "//bindings:__subpackages__",
    "//lucid:__subpackages__",
    "//tests:__subpackages__",
])

lucid_srcs(name = "srcs")

lucid_hdrs_tar(
    name = "hdrs_tar",
    subfolder = "util",
)

cpplint()

whl_filegroup(
    name = "numpy_headers",
    pattern = "numpy/_core/include",
    whl = "@pypi//numpy:whl",
)

lucid_pybind_library(
    name = "matplotlib",
    srcs = ["matplotlib.cpp"],
    hdrs = ["matplotlib.h"],
    implementation_deps = [":error"],
    tags = ["no-dwyu"],
    visibility = ["//visibility:public"],
    deps = [
        "//lucid/lib:eigen",
        "@rules_python//python/cc:current_py_cc_libs",
    ],
)

lucid_cc_library(
    name = "definitions",
    hdrs = ["definitions.h"],
)

lucid_cc_library(
    name = "configuration",
    srcs = ["Configuration.cpp"],
    hdrs = ["Configuration.h"],
    implementation_deps = [":error"],
    deps = [
        ":logging",
        "//lucid/lib:eigen",
        "//lucid/model:set",
    ],
)

lucid_cc_library(
    name = "error",
    hdrs = ["error.h"],
    deps = [
        ":exception",
        ":logging",
        "@fmt",
    ],
)

lucid_cc_library(
    name = "constants",
    hdrs = ["constants.h"],
)

lucid_cc_library(
    name = "exception",
    hdrs = ["exception.h"],
)

lucid_cc_library(
    name = "logging",
    srcs = ["logging.cpp"],
    hdrs = ["logging.h"],
    deps = [
        "@fmt",
        "@spdlog",
    ],
)

lucid_cc_library(
    name = "concepts",
    hdrs = ["concept.h"],
)

lucid_cc_library(
    name = "random",
    srcs = ["random.cpp"],
    hdrs = ["random.h"],
)

lucid_cc_library(
    name = "math",
    hdrs = ["math.h"],
    deps = ["@boost.math"],
)

lucid_cc_library(
    name = "timer",
    srcs = ["Timer.cpp"],
    hdrs = ["Timer.h"],
    implementation_deps = [
        ":error",
        ":logging",
    ],
)

lucid_cc_library(
    name = "stats",
    srcs = ["Stats.cpp"],
    hdrs = ["Stats.h"],
    implementation_deps = [
        ":error",
        ":logging",
    ],
    deps = [
        ":scoped_value",
        ":timer",
    ],
)

lucid_cc_library(
    name = "scoped_value",
    hdrs = ["ScopedValue.h"],
)

lucid_cc_library(
    name = "index_iterator",
    srcs = ["IndexIterator.cpp"],
    hdrs = ["IndexIterator.h"],
    implementation_deps = [":error"],
    deps = [
        ":concepts",
        ":logging",
        "//lucid/lib:eigen",
    ],
)

lucid_cc_library(
    name = "tensor",
    srcs = [
        "Tensor.cpp",
        "TensorIterator.cpp",
        "TensorView.cpp",
    ],
    hdrs = [
        "Tensor.h",
        "TensorIterator.h",
        "TensorView.h",
    ],
    implementation_deps = [
        ":error",
        "//lucid/lib:pocketfft",
    ],
    deps = [
        ":concepts",
        ":exception",
        ":index_iterator",
        ":logging",
        "//lucid/lib:eigen",
    ],
)

lucid_cc_library(
    name = "util",
    hdrs = ["util.h"],
    deps = [
        ":concepts",
        ":constants",
        ":definitions",
        ":exception",
        ":index_iterator",
        ":math",
        ":random",
        ":scoped_value",
        ":stats",
        ":tensor",
        ":timer",
    ],
)
