load("//tools:cpplint.bzl", "cpplint")
load("//tools:rules_cc.bzl", "lucid_cc_library", "lucid_hdrs_tar", "lucid_srcs")

package(default_visibility = [
    "//bindings:__subpackages__",
    "//lucid:__subpackages__",
    "//tests:__subpackages__",
])

lucid_srcs(name = "srcs")

lucid_hdrs_tar(
    name = "hdrs_tar",
    subfolder = "verification",
)

cpplint()

lucid_cc_library(
    name = "optimiser",
    srcs = [
        "AlglibOptimiser.cpp",
        "HighsOptimiser.cpp",
        "Optimiser.cpp",
    ],
    hdrs = [
        "AlglibOptimiser.h",
        "HighsOptimiser.h",
        "Optimiser.h",
    ],
    implementation_deps = [
        "//lucid/lib:alglib",
        "//lucid/lib:highs",
        "//lucid/util:error",
        "//lucid/util:logging",
    ] + select({
        "//tools:python_build": ["//bindings/pylucid:interrupt"],
        "//conditions:default": [],
    }),
    deps = [
        "//lucid/lib:eigen",
    ],
)

lucid_cc_library(
    name = "gurobi_optimiser",
    srcs = ["GurobiOptimiser.cpp"],
    hdrs = ["GurobiOptimiser.h"],
    implementation_deps = [
        "//lucid/lib:gurobi",
        "//lucid/util:error",
        "//lucid/util:logging",
    ] + select({
        "//tools:python_build": ["//bindings/pylucid:interrupt"],
        "//conditions:default": [],
    }),
    deps = [
        ":optimiser",
        "//lucid/lib:eigen",
    ],
)

lucid_cc_library(
    name = "verification",
    hdrs = ["verification.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":gurobi_optimiser",
        ":optimiser",
    ],
)
